Avoid rotate on mobile

--- a/cards.css
+++ b/cards.css
@@ -497,3 +497,16 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', e
      margin-top: 150px;
   }
 }
+
+@media screen and (max-width: 767px) {
+
+  .card .left {
+    transform: none;
+  }
+
+  .card .right {
+    transform: none;
+  }
+}
+
+
